feat: add TOKEN KEY

--- a/discord-clone-backend/.env
+++ b/discord-clone-backend/.env
@@ -1,3 +1,5 @@
 API_PORT=5002
 
 MONGO_URI=mongodb+srv://Chulyeon:discord@cluster1.m7ptitx.mongodb.net/discord?retryWrites=true&w=majority
+
+TOKEN_KEY=hereShouldGoStrongTokenKey
