--- a/discord-clone-backend/package.json
+++ b/discord-clone-backend/package.json
@@ -18,6 +18,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "socket.io": "^4.5.1"
   }
 }
